# omf_samples

./: README.md  version
demo/: makefile.tmpl
demo/aac/: _omfAacPlayer.cpp  makefile
demo/av/: _omfAudioPlayer.cpp  _omfAudioRecorder.cpp  _omfMultiStream.cpp  _omfNnRecorder.cpp  _omfPreRecord.cpp  _omfRecorder.cpp  makefile
demo/c++/: _omfAacPlayer.cpp  _omfEventService.cpp  _omfEventServiceTrigger.cpp  _omfQRCode.cpp  _omfStampSet.cpp  _omfTemplate.cpp  _omfWavRecord.cpp  _omfZonesSet.cpp  makefile
demo/cxx/: _omfTemplate.cpp  _omfcmd.cpp  _omfmsg.cpp  makefile
demo/g711/: _omfG711Player.cpp  _omfG711Recorder.cpp  makefile
demo/g722/: _omfG722Player.cpp  _omfG722Recorder.cpp  makefile
demo/hls/: _omfHlsMuxer.cpp  makefile
demo/iotc/: icatchtek_mt7682_def.h  iotc_console.cpp  iotc_console.h  iotc_debug_print.h  iotc_demo.cpp  iotc_demo_kvs.cpp  iotc_demo_pure.cpp  iotc_io.cpp  iotc_io.h  iotc_listen.cpp  iotc_listen.h  iotc_queue.cpp  iotc_queue.h  iotc_receiver.cpp  iotc_receiver.h  iotc_transmitter.cpp  iotc_transmitter.h  makefile
demo/kvs/: _omfKvspb.cpp  _omfKvspbSimplest.cpp  makefile
demo/md/: _omfMotionDetectionNn.cpp  makefile
demo/msgsite/: _demo0MsgSite.c  _demoMsgSite.cpp  _omfMemPool.cpp  _omfMsgReceive.cpp  _omfMsgReceive0.c  _omfMsgSend.cpp  _omfMsgSend0.c  _omfMsgSite.cpp  _omfMsgSite0.c  _omfMsgUser.c  makefile
demo/mt7682/: _omfWifiConnect.cpp  makefile
demo/nn/: _omfFaceDetect.cpp  _omfFaceRecog.cpp  _omfFaceRecognise.cpp  _omfHumanDetect.cpp  _omfNnFaceDetectProcess.cpp  _omfNnFaceRecogProcess.cpp  _omfNnHumanProcess.cpp  _omfNnIcatosDemo.cpp  _omfNnMsgTest.cpp  _omfNnProcess.cpp  _omfNnProcess0.cpp  makefile
demo/ogg/: _omfOggMuxer.cpp  makefile
demo/opus/: _omfOggMuxer.cpp  _omfOpusEncDec.cpp  makefile
demo/pool/: _omfMemPool.cpp  makefile
demo/prerec/: _omfEventService.cpp  _omfEventServiceTrigger.cpp  _omfEventServiceV1.cpp  _omfPreRecord.cpp  makefile
demo/qrcode/: _omfQRCode.cpp  makefile
demo/remotepush/: inifile.c  inifile.h  makefile  remote_push_demo.c  remote_push_errno.h  remote_push_interface.c  remote_push_interface.h  (+5 more)
demo/rtsp/: CMakeLists.txt  OmfRtspService.cpp  OmfRtspService.h  RtpSink.cpp  RtpSink.h  RtpSource.cpp  RtpSource.h  RtspServer.cpp  RtspServer.h  RtspService.cpp  RtspService.h  RtspSession.cpp  RtspSession.h  RtspSmss.cpp  RtspSmss.h  RtspSmssAac.cpp  RtspSmssAac.h  RtspSmssH264.cpp  RtspSmssH264.h  RtspSmssH265.cpp  RtspSmssH265.h  RtspSmssJpeg.cpp  RtspSmssJpeg.h  RtspSmssPcm.cpp  RtspSmssPcm.h  _rtp.h  makefile  rtp.h  rtsp.h
demo/rtspserver/: CMakeLists.txt  IRtspService.cpp  IRtspService.h  RtpSink.cpp  RtpSink.h  RtpSource.cpp  RtpSource.h  RtspServer.h  RtspService.h  RtspSmss.h  RtspSmssAac.cpp  RtspSmssJpeg.cpp  RtspSmssPcm.cpp  _demoRtspServer.cpp  _omfRtspServer.cpp  makefile
include/: OmfAttrSet.h  OmfDbg.h  OmfFrame.h  OmfHelper.h  OmfMain.h  OmfMemPool.h  OmfMessage.h  OmfMsgSite.h  OmfObject.h  OmfRtspService.h  OmfState.h  _linux.h  omf_active.h  omf_api.h  omf_msg_site.h  omf_msg_site_user.h
(+169 files in other folders)
